--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   http: ^1.2.0
   syntax_highlight: ^0.3.0
   google_fonts: ^6.1.0
+  web: '>=0.3.0 <0.5.0'
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
